@@ -67,8 +67,7 @@
     <CLRSupport>true</CLRSupport>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-  <ImportGroup Label="ExtensionSettings">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionSettings"></ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Public|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
@@ -131,16 +130,12 @@
       <DelayLoadDLLs>d3d9.dll;d3dx9_42.dll;d3dx10_42.dll;d3dx11_42.dll;d3dcompiler_42.dll;d3dcsx_42.dll;d3d10.dll;d3d10_1.dll;d3d11.dll;d2d1.dll;dwrite.dll;dxgi.dll;dinput8.dll;x3daudio1_7.dll;xinput1_3.dll;dsound.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AssemblyDebug>true</AssemblyDebug>
-      <LinkTimeCodeGeneration>
-      </LinkTimeCodeGeneration>
+      <LinkTimeCodeGeneration></LinkTimeCodeGeneration>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>
-      </DataExecutionPrevention>
+      <DataExecutionPrevention></DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
-      <KeyFile>
-      </KeyFile>
-      <KeyContainer>
-      </KeyContainer>
+      <KeyFile></KeyFile>
+      <KeyContainer></KeyContainer>
       <CLRUnmanagedCodeCheck>true</CLRUnmanagedCodeCheck>
     </Link>
   </ItemDefinitionGroup>
@@ -167,16 +162,12 @@
       <DelayLoadDLLs>d3d9.dll;d3dx9_42.dll;d3dx10_42.dll;d3dx11_42.dll;d3dcompiler_42.dll;d3dcsx_42.dll;d3d10.dll;d3d10_1.dll;d3d11.dll;d2d1.dll;dwrite.dll;dxgi.dll;dinput8.dll;x3daudio1_7.dll;xinput1_3.dll;dsound.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AssemblyDebug>true</AssemblyDebug>
-      <LinkTimeCodeGeneration>
-      </LinkTimeCodeGeneration>
+      <LinkTimeCodeGeneration></LinkTimeCodeGeneration>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>
-      </DataExecutionPrevention>
+      <DataExecutionPrevention></DataExecutionPrevention>
       <TargetMachine>MachineX64</TargetMachine>
-      <KeyFile>
-      </KeyFile>
-      <KeyContainer>
-      </KeyContainer>
+      <KeyFile></KeyFile>
+      <KeyContainer></KeyContainer>
       <CLRUnmanagedCodeCheck>true</CLRUnmanagedCodeCheck>
     </Link>
   </ItemDefinitionGroup>
@@ -204,11 +195,9 @@
       <DelayLoadDLLs>d3d9.dll;d3dx9_42.dll;d3dx10_42.dll;d3dx11_42.dll;d3dcompiler_42.dll;d3dcsx_42.dll;d3d10.dll;d3d10_1.dll;d3d11.dll;d2d1.dll;dwrite.dll;dxgi.dll;dinput8.dll;x3daudio1_7.dll;xinput1_3.dll;dsound.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>
-      </DataExecutionPrevention>
+      <DataExecutionPrevention></DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
-      <KeyFile>
-      </KeyFile>
+      <KeyFile></KeyFile>
       <CLRUnmanagedCodeCheck>true</CLRUnmanagedCodeCheck>
     </Link>
   </ItemDefinitionGroup>
@@ -238,11 +227,9 @@
       <DelayLoadDLLs>d3d9.dll;d3dx9_42.dll;d3dx10_42.dll;d3dx11_42.dll;d3dcompiler_42.dll;d3dcsx_42.dll;d3d10.dll;d3d10_1.dll;d3d11.dll;d2d1.dll;dwrite.dll;dxgi.dll;dinput8.dll;x3daudio1_7.dll;xinput1_3.dll;dsound.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>
-      </DataExecutionPrevention>
+      <DataExecutionPrevention></DataExecutionPrevention>
       <TargetMachine>MachineX64</TargetMachine>
-      <KeyFile>
-      </KeyFile>
+      <KeyFile></KeyFile>
       <CLRUnmanagedCodeCheck>true</CLRUnmanagedCodeCheck>
     </Link>
   </ItemDefinitionGroup>
@@ -268,8 +255,7 @@
       <DelayLoadDLLs>d3d9.dll;d3dx9_42.dll;d3dx10_42.dll;d3dx11_42.dll;d3dcompiler_42.dll;d3dcsx_42.dll;d3d10.dll;d3d10_1.dll;d3d11.dll;d2d1.dll;dwrite.dll;dxgi.dll;dinput8.dll;x3daudio1_7.dll;xinput1_3.dll;dsound.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>
-      </DataExecutionPrevention>
+      <DataExecutionPrevention></DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
       <KeyFile>D:\slimdxKey.snk</KeyFile>
       <DelaySign>false</DelaySign>
@@ -307,8 +293,7 @@ sn -R $(TargetPath) D:\slimdxKey.snk
       <DelayLoadDLLs>d3d9.dll;d3dx9_42.dll;d3dx10_42.dll;d3dx11_42.dll;d3dcompiler_42.dll;d3dcsx_42.dll;d3d10.dll;d3d10_1.dll;d3d11.dll;d2d1.dll;dwrite.dll;dxgi.dll;dinput8.dll;x3daudio1_7.dll;xinput1_3.dll;dsound.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>
-      </DataExecutionPrevention>
+      <DataExecutionPrevention></DataExecutionPrevention>
       <TargetMachine>MachineX64</TargetMachine>
       <KeyFile>D:\slimdxKey.snk</KeyFile>
       <DelaySign>false</DelaySign>
@@ -846,6 +831,7 @@ sn -R $(TargetPath) D:\slimdxKey.snk
     <ClCompile Include="..\..\source\direct3d11\Counter11.cpp" />
     <ClCompile Include="..\..\source\direct3d11\CounterCapabilities11.cpp" />
     <ClCompile Include="..\..\source\direct3d11\CounterMetadata11.cpp" />
+    <ClCompile Include="..\..\source\direct3d11\Debug11.cpp" />
     <ClCompile Include="..\..\source\direct3d11\Resource11.cpp" />
     <ClCompile Include="..\..\source\direct3d11\ResourceRegion11.cpp" />
     <ClCompile Include="..\..\source\direct3d11\TextureLoadInformation11.cpp" />
@@ -1545,6 +1531,7 @@ sn -R $(TargetPath) D:\slimdxKey.snk
     <ClInclude Include="..\..\source\direct3d11\Counter11.h" />
     <ClInclude Include="..\..\source\direct3d11\CounterCapabilities11.h" />
     <ClInclude Include="..\..\source\direct3d11\CounterMetadata11.h" />
+    <ClInclude Include="..\..\source\direct3d11\Debug11.h" />
     <ClInclude Include="..\..\source\direct3d11\Resource11.h" />
     <ClInclude Include="..\..\source\direct3d11\ResourceRegion11.h" />
     <ClInclude Include="..\..\source\direct3d11\TextureLoadInformation11.h" />
@@ -1671,6 +1658,5 @@ sn -R $(TargetPath) D:\slimdxKey.snk
     <None Include="..\.\ReleaseNotes.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets"></ImportGroup>
 </Project>
