@@ -52,6 +52,7 @@ Direct3D 11
 	* Added missing TextureCube members to ShaderResourceViewDescription.
 	* Cleaned up the DirectCompute interfaces.
 	* Added creation methods for the FastFourierTransform type.
+	* Added support for the Debug and SwitchToRef interfaces.
 	
 Windows
 	* Added several overloads to MessagePump.Run to allow access to corresponding Application.Run overloads.
